# hemp0x-commander

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
docs/: BUILDING.md  RELEASE_BUILDING.md  THIRD_PARTY_NOTICES.md  UNIFIED_VAULT.md
docs/releases/: hemp0x-commander-2.0.0.md
scripts/: build_linux_universal_2_0.sh  stage_core_next.sh
src/: App.svelte  app.css  components.css  main.js  stores.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/modules/: commands.rs  content_library.rs  files.rs  h0xc_control_message.rs  ipfs_cache.rs  ipfs_publish.rs  journal.rs  mod.rs  models.rs  process.rs  provider_settings.rs  rpc.rs  runtime.rs  short_message.rs  short_message_suggestions.rs  short_message_table_packs.rs  short_message_tables.rs  utils.rs  vault.rs  wallet_pin_unlock.rs
src-tauri/src/modules/stratum/: address.rs  job.rs  mod.rs  protocol.rs  server.rs  share.rs  state.rs  vardiff.rs
src/lib/: ViewAssets.svelte  ViewReceive.svelte  ViewSend.svelte  ViewTools.svelte  constants.js  utils.js  walletPinUnlock.js
src/lib/content/: CidImportPanel.svelte  CidViewer.svelte  ContentLibraryPanel.svelte  ContentRenderer.svelte  IpfsHub.svelte  PackageCard.svelte  PackageComposer.svelte  ProviderSettingsPanel.svelte  SystemHub.svelte
src/lib/explorer/: AddressView.svelte  ExplorerView.svelte  TransactionView.svelte  index.js  utils.js
src/lib/modals/: ModalAlert.svelte  ModalAssetAdvanced.svelte  ModalAssetDetail.svelte  ModalAssetGovernance.svelte  ModalBrowse.svelte  ModalConfirm.svelte  ModalIssueAsset.svelte  ModalIssueNFT.svelte  ModalIssueSub.svelte  ModalReissue.svelte  ModalTransfer.svelte
src/lib/stores/: contentLibrary.js  h0xc-control.js  h0xc.js  messageIndex.js  notifications.js  stratum.js  systemHub.js
src/lib/tools/: ToolsConsole.svelte  ToolsConsolidation.svelte  ToolsHistory.svelte  ToolsJournal.svelte  ToolsNetwork.svelte  ToolsRawTx.svelte  ToolsSoloMining.svelte  ToolsWallet.svelte
src/lib/ui/: AddressBookPicker.svelte  AssetPicker.svelte  CommanderLoader.svelte  ContentLibraryPicker.svelte  CopyIcon.svelte  HelpHitbox.svelte  IpfsHashField.svelte  IpfsReference.svelte  NotificationCenter.svelte  ShortMessageAutocomplete.svelte  Tooltip.svelte  VaultUnlockModal.svelte  WalletAddressPicker.svelte  WalletUnlockModal.svelte
src/lib/ui/asset-detail/: AssetDetailDetailsTab.svelte
src/lib/ui/asset-messages/: AssetMessageCompose.svelte  AssetMessageDetail.svelte  AssetMessageInbox.svelte  TablePackPanel.svelte
src/lib/ui/h0xc/: H0xCChatCompose.svelte  H0xCChatPanel.svelte  (+5 more)
src/lib/utils/: nodeSync.js
