[package]
name = "hemp0x-commander"
version = "2.0.0"
description = "Hemp0x Commander - secure non-custodial wallet manager for the Hemp0x blockchain"
authors = ["Hemp0x Core Team"]
license = "MIT"
repository = "https://github.com/hemp0x/hemp0x-commander"
edition = "2021"
rust-version = "1.77.2"
default-run = "hemp0x-commander"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2.4.2"
chrono = { version = "0.4", features = ["clock"] }
dirs = "5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
sevenz-rust = "0.6"
ureq = { version = "2", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["net", "io-util", "sync", "time", "rt-multi-thread", "macros"] }
sha2 = "0.10"
sha3 = "0.10"
bs58 = "0.5"
hex = "0.4"
local-ip-address = "0.6"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hmac = "0.12"
scrypt = "0.11"
zeroize = { version = "1", features = ["zeroize_derive"] }
bip39 = { version = "2", features = ["rand"] }
